# PDF-Converter-Solution

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pro Forma (4 Products).xlsx  README.md  docker-compose.yml  generate_pdf.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  deploy.yml
src/excel_pdf_converter/: __init__.py  __main__.py  converter.py  excel_reader.py  pdf_generator.py
